--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Control1 — A/V Technology</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Control1</title>
 
   <style>
+    /* RESET */
     * {
       margin: 0;
       padding: 0;
@@ -14,223 +15,217 @@
     }
 
     body {
-      background: #000;
-      color: #fff;
-      line-height: 1.6;
+      background: black;
+      color: white;
+      min-height: 300vh; /* gives scroll room for the video */
     }
 
-    a {
-      text-decoration: none;
-      color: inherit;
+    /* BACKGROUND VIDEO */
+    #bg-video {
+      position: fixed;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -2;
+      filter: brightness(0.55);
     }
 
-    section {
-      padding: 120px 8%;
+    /* DARK OVERLAY */
+    .overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.45);
+      z-index: -1;
     }
 
-    /* ---------- HERO ---------- */
-    header {
+    /* HERO */
+    .hero {
       height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
+      padding: 2rem;
     }
 
-    header h1 {
-      font-size: clamp(3rem, 6vw, 5.5rem);
-      font-weight: 600;
+    .hero h1 {
+      font-size: clamp(3rem, 6vw, 6rem);
       letter-spacing: -0.02em;
+      margin-bottom: 1rem;
     }
 
-    header p {
+    .hero p {
       max-width: 900px;
-      margin-top: 25px;
       font-size: 1.2rem;
-      color: #ccc;
+      line-height: 1.6;
+      opacity: 0.9;
     }
 
-    /* ---------- BUTTONS ---------- */
-    .button-row {
-      margin-top: 50px;
+    /* BUTTONS */
+    .buttons {
+      margin-top: 2rem;
       display: flex;
-      gap: 20px;
+      gap: 1rem;
       flex-wrap: wrap;
       justify-content: center;
     }
 
-    .btn {
-      padding: 14px 32px;
-      border: 1px solid #fff;
+    .buttons a {
+      text-decoration: none;
+      padding: 0.8rem 1.6rem;
+      border: 1px solid white;
+      color: white;
       border-radius: 999px;
       transition: all 0.3s ease;
-      font-weight: 500;
     }
 
-    .btn:hover {
-      background: #fff;
-      color: #000;
+    .buttons a:hover {
+      background: white;
+      color: black;
     }
 
-    /* ---------- SECTIONS ---------- */
-    .section-title {
+    /* SECTIONS */
+    section {
+      padding: 8rem 10%;
+      max-width: 1400px;
+      margin: auto;
+    }
+
+    section h2 {
       font-size: 3rem;
-      margin-bottom: 60px;
-      text-align: center;
-      font-weight: 600;
+      margin-bottom: 3rem;
+      letter-spacing: -0.02em;
     }
 
     .product {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 60px;
-      align-items: center;
-      margin-bottom: 120px;
-    }
-
-    .product.reverse {
-      direction: rtl;
-    }
-
-    .product.reverse > * {
-      direction: ltr;
+      margin-bottom: 4rem;
     }
 
     .product h3 {
-      font-size: 2.2rem;
-      margin-bottom: 20px;
+      font-size: 2rem;
+      margin-bottom: 1rem;
     }
 
     .product p {
-      color: #ccc;
-      font-size: 1.05rem;
+      max-width: 800px;
+      line-height: 1.6;
+      opacity: 0.9;
     }
 
-    /* ---------- IMAGE PLACEHOLDERS ---------- */
+    /* IMAGE PLACEHOLDERS */
     .image-placeholder {
       width: 100%;
-      height: 320px;
-      border: 1px solid #333;
+      height: 300px;
+      background: rgba(255, 255, 255, 0.08);
+      border-radius: 16px;
+      margin: 2rem 0;
       display: flex;
       align-items: center;
       justify-content: center;
-      color: #555;
-      font-size: 1rem;
+      color: rgba(255, 255, 255, 0.4);
+      font-size: 1.2rem;
     }
 
-    /* ---------- FOOTER ---------- */
+    /* FOOTER */
     footer {
-      padding: 60px 8%;
+      padding: 4rem 2rem;
       text-align: center;
-      color: #666;
-      border-top: 1px solid #222;
-    }
-
-    /* ---------- ANIMATIONS ---------- */
-    .fade {
-      opacity: 0;
-      transform: translateY(40px);
-      transition: all 0.8s ease;
-    }
-
-    .fade.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    @media (max-width: 900px) {
-      .product {
-        grid-template-columns: 1fr;
-      }
-
-      header {
-        padding: 0 8%;
-      }
+      opacity: 0.6;
     }
   </style>
 </head>
 
 <body>
 
+  <!-- BACKGROUND VIDEO -->
+  <video id="bg-video" muted playsinline>
+    <source src="Fluorescent_Logo_Reveal_720p.mp4" type="video/mp4">
+  </video>
+
+  <div class="overlay"></div>
+
   <!-- HERO -->
-  <header class="fade">
+  <div class="hero">
     <h1>Control1</h1>
     <p>
-      Control1 is an A/V Technology company that started as an installation company and evolved into
-      developing A/V equipment, security solutions, and military technology. As the first company
-      to publicly release a product supporting Dolby Atmos on Roblox, we strive to deliver
-      unmatched quality and care.
+      Control1 is an A/V Technology company that started as an installation company and expanded into
+      developing A/V equipment, security systems, and military technology. As the first company to
+      publicly release Dolby Atmos support on Roblox, we focus on premium quality and customer care.
     </p>
 
-    <div class="button-row">
-      <a class="btn" href="https://www.discord.gg/znmq9cjNtr" target="_blank">Discord</a>
-      <a class="btn" href="https://www.roblox.com/communities/33114320/Control1#!/about" target="_blank">Roblox Group</a>
-      <a class="btn" href="https://shop.parcelroblox.com/store/6779e36040a90b3e8acd32d5" target="_blank">Store</a>
+    <div class="buttons">
+      <a href="https://www.discord.gg/znmq9cjNtr" target="_blank">Discord</a>
+      <a href="https://www.roblox.com/communities/33114320/Control1#!/about" target="_blank">Roblox Group</a>
+      <a href="https://shop.parcelroblox.com/store/6779e36040a90b3e8acd32d5" target="_blank">Store</a>
     </div>
-  </header>
+  </div>
 
-  <!-- PRODUCT LINEUP -->
+  <!-- PRODUCTS -->
   <section>
-    <h2 class="section-title fade">Our Product Lineup</h2>
+    <h2>Our Product Lineup</h2>
 
-    <!-- AVR-2720 -->
-    <div class="product fade">
-      <div>
-        <h3>AVR-2720</h3>
-        <p>
-          The AVR-2720 is a state-of-the-art 7.2 A/V Receiver supporting Dolby Atmos,
-          Dolby Surround, stereo, and mono audio, along with 4K video output.
-          Delivering 95 watts per channel and featuring six HDMI inputs, it is designed
-          for immersive theaters and powerful living room setups.
-        </p>
-      </div>
-      <div class="image-placeholder">AVR-2720 Image Placeholder</div>
+    <div class="product">
+      <h3>AVR-2720</h3>
+      <div class="image-placeholder">Product Image Placeholder</div>
+      <p>
+        A state-of-the-art 7.2 A/V receiver supporting Dolby Atmos, Dolby Surround, stereo, and mono
+        audio with 4K video. Delivering 95W per channel and six HDMI inputs, it’s built for theaters
+        and large living rooms alike.
+      </p>
     </div>
 
-    <!-- Server Racks -->
-    <div class="product reverse fade">
-      <div>
-        <h3>Server Racks</h3>
-        <p>
-          Control1 Server Racks are simple, reliable, and essential.
-          Available in small and large variants, they support installations ranging
-          from small businesses to enterprise environments. Each rack includes a shelf
-          for compact amplifiers or receivers.
-        </p>
-      </div>
-      <div class="image-placeholder">Server Rack Image Placeholder</div>
+    <div class="product">
+      <h3>Server Racks</h3>
+      <div class="image-placeholder">Product Image Placeholder</div>
+      <p>
+        Simple, necessary server racks available in multiple sizes. Designed for environments ranging
+        from small businesses to enterprise deployments, including an integrated shelf for compact
+        equipment.
+      </p>
     </div>
 
-    <!-- ControlOS -->
-    <div class="product fade">
-      <div>
-        <h3>ControlOS 3</h3>
-        <p>
-          ControlOS 3 is currently unreleased. More details coming soon.
-        </p>
-      </div>
-      <div class="image-placeholder">ControlOS 3 Image Placeholder</div>
+    <div class="product">
+      <h3>ControlOS 3</h3>
+      <div class="image-placeholder">Coming Soon</div>
+      <p>
+        ControlOS 3 is currently unreleased.
+      </p>
     </div>
   </section>
 
-  <!-- FOOTER -->
   <footer>
     © 2026 Control1. All rights reserved.
   </footer>
 
+  <!-- SCROLL-SYNC VIDEO SCRIPT -->
   <script>
-    const fades = document.querySelectorAll('.fade');
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add('show');
-        }
-      });
-    });
+    const video = document.getElementById("bg-video");
+    let targetTime = 0;
 
-    fades.forEach(fade => observer.observe(fade));
+    video.addEventListener("loadedmetadata", () => {
+      const duration = video.duration;
+
+      function updateScrollTarget() {
+        const scrollTop = window.scrollY;
+        const maxScroll =
+          document.documentElement.scrollHeight - window.innerHeight;
+
+        const progress = Math.min(scrollTop / maxScroll, 1);
+        targetTime = progress * duration;
+      }
+
+      function smoothScrub() {
+        video.currentTime += (targetTime - video.currentTime) * 0.08;
+        requestAnimationFrame(smoothScrub);
+      }
+
+      window.addEventListener("scroll", updateScrollTarget);
+      smoothScrub();
+    });
   </script>
 
 </body>
 </html>
+
